fixed background-color behind addressbar on mobile ff

--- a/metager/resources/less/metager/parts/scaffolding.less
+++ b/metager/resources/less/metager/parts/scaffolding.less
@@ -7,14 +7,13 @@
   .box-sizing(border-box);
 }
 
-
+html,
 body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 1.1em;
   line-height: 1.5;
   color: @text-color;
   background-color: @background-color;
-
 }
 
 figure {
@@ -24,7 +23,6 @@ figure {
 img {
   vertical-align: middle;
 }
-
 
 hr {
   margin-top: 20px;
